--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ allure {
 }
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
@@ -29,9 +30,13 @@ dependencies {
     testImplementation 'com.mysql:mysql-connector-j:8.1.0'
     testImplementation 'com.codeborne:selenide:6.17.0'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
+    testImplementation 'org.projectlombok:lombok:1.18.26'
     testCompileOnly 'org.projectlombok:lombok:1.18.28'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
     implementation 'io.qameta.allure:allure-selenide:2.23.0'
+    implementation 'com.epam.reportportal:agent-java-junit5:5.1.6'
+    implementation 'com.epam.reportportal:logger-java-logback:5.1.4'
+    implementation 'ch.qos.logback:logback-classic:1.4.6'
 }
 
 test {
@@ -40,4 +45,7 @@ test {
     systemProperty 'dbUrl', System.getProperty('db.url', 'jdbc:mysql://185.119.57.126:3306/app')
     systemProperty 'dbUsername', System.getProperty('dbUsername', 'app')
     systemProperty 'dbPassword', System.getProperty('dbPassword', 'pass')
+
+    systemProperty 'junit.jupiter.extensions.autodetection.enabled', true
+    testLogging.showStandardStreams = true
 }
