--- a/build.gradle
+++ b/build.gradle
@@ -28,24 +28,22 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter:5.10.0'
     testImplementation 'commons-dbutils:commons-dbutils:1.7'
     testImplementation 'com.mysql:mysql-connector-j:8.1.0'
+    testImplementation 'org.postgresql:postgresql:42.5.2'
     testImplementation 'com.codeborne:selenide:6.17.0'
     testImplementation 'com.github.javafaker:javafaker:1.0.2'
     testImplementation 'org.projectlombok:lombok:1.18.26'
     testCompileOnly 'org.projectlombok:lombok:1.18.28'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.28'
     implementation 'io.qameta.allure:allure-selenide:2.23.0'
-    implementation 'com.epam.reportportal:agent-java-junit5:5.1.6'
-    implementation 'com.epam.reportportal:logger-java-logback:5.1.4'
-    implementation 'ch.qos.logback:logback-classic:1.4.6'
 }
 
 test {
     useJUnitPlatform()
     systemProperty 'selenide.headless', System.getProperty('selenide.headless')
-    systemProperty 'dbUrl', System.getProperty('db.url', 'jdbc:mysql://185.119.57.126:3306/app')
-    systemProperty 'dbUsername', System.getProperty('dbUsername', 'app')
-    systemProperty 'dbPassword', System.getProperty('dbPassword', 'pass')
+    systemProperty 'db.url', System.getProperty('db.url', 'jdbc:mysql://localhost:3306/app')
+    systemProperty 'db.username', System.getProperty('db.username', 'app')
+    systemProperty 'db.password', System.getProperty('db.password', 'pass')
 
-    systemProperty 'junit.jupiter.extensions.autodetection.enabled', true
-    testLogging.showStandardStreams = true
+//    systemProperty 'junit.jupiter.extensions.autodetection.enabled', true
+//    testLogging.showStandardStreams = true
 }
